--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "serverInstance": "BC180",
             "authentication": "Windows",
             "port": 5049,
-            "startupObjectId": 50100,
+            "startupObjectId": 90100,
             "startupObjectType": "Page",
             "breakOnError": true,
             "launchBrowser": true,
@@ -28,7 +28,7 @@
                "environmentType": "OnPrem",
                "server": "http://172.16.30.215/BYS_PROD/",
                "serverInstance": "BYS_PROD",
-               "authentication": "UserPassword",
+               "authentication": "Windows",
               "startupObjectId": 22,
               "startupObjectType": "Page",
                "breakOnError": true,
