--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "71b6cfc9-84d0-4966-ace5-530b5eef3d39",
-  "name": "ETPOSExtension",
+  "name": "EFTPOSExtension",
   "publisher": "Default publisher",
   "version": "18.2.0.1000264",
   "brief": "",
@@ -26,6 +26,13 @@
         "name":  "LS Central System App",
         "version":  "18.2.0.0"
     }
+    ,
+    {
+      "id":  "eb2ead07-f86a-4c11-bfb7-630bbcb2e992",
+      "publisher":  "Default publisher",
+      "name":  "BY DEV",
+      "version":  "1.0.0.0"
+  }
 ],
 "internalsVisibleTo":  [
           {
